# safe-lyrics-checker

./: LICENSE  README.md  pyproject.toml
safe_lyrics_checker/: __init__.py  cli.py  http_cache.py  quote_safety.py  rights_engine.py  rules_engine.py  search_engine.py
safe_lyrics_checker/search_sources/: __init__.py  archive.py  common.py  copyright_office.py  cpdl.py  gutenberg.py  imslp.py  loc.py  models.py  worldcat.py
safe_lyrics_checker/url_sources/: __init__.py  archive.py  common.py  evaluator.py  gutenberg.py  models.py
tests/: test_cli.py  test_evaluate_url.py  test_quote_safety.py  test_rights_engine.py  test_rules_engine.py  test_search.py
