[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe_lyrics_checker"
version = "0.1.0"
description = "CLI tool for checking lyric excerpts against conservative copyright-safety rules"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "safe_lyrics_checker contributors"}
]
keywords = ["lyrics", "copyright", "cli", "compliance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Text Processing"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
safe-lyrics-checker = "safe_lyrics_checker.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["safe_lyrics_checker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
